# gpredomicsR

./: .gitignore  Cargo.toml  DESCRIPTION  NAMESPACE  README.md
R/: db.R  experiment.R  extendr-wrappers.R  gpredomics.R  gpredomics_caret.R  individual.R  logging.R  utils.R  visu.R  zzz.R
man/: Data.Rd  Experiment.Rd  GLogger.Rd  Individual.Rd  Jury.Rd  Param.Rd  Population.Rd  RunningFlag.Rd  analyzeAttributeEvolution.Rd  analyzeEvolutionAllModels.Rd  analyzePopulationFeatures.Rd  as.gpredomics.data.Rd  as_gpredomics_data.Rd  caret-integration-Gpredomics-Summary-Function-for-Caret.Rd  caret-integration.Rd  check.X_y.Rd  computeCardEnrichment.Rd  compute_auc_individual.Rd  confInterBinomial.Rd  create_individual.Rd  dot-extract_best_model.Rd  dot-predict_from_experiment.Rd  dot-predict_scores_from_experiment.Rd  evaluate_individual.Rd  filterfeaturesK.Rd  fit.Rd  fit_on.Rd  ga.Rd  getFeaturePrevalence.Rd  getModelInfo_gpredomics.Rd  getPopulationAttribute.Rd  getTheBestIndividual.Rd  get_fields.Rd  get_taxonomy.Rd  gp_get_log_level.Rd  gp_set_log_level.Rd  gpredomics_grid.Rd  gpredomics_info.Rd  gpredomics_params_info.Rd  gpredomics_predict.Rd  (+36 more)
sample/: caret_qin2014_examples.R  example.R  hs_10_4_1990_MSP.20240626.gtdb_r220_annot_long.tsv  main.R  param.yaml  storage.R  test_code.R
src/: Makevars  Makevars.win  entrypoint.c  gpredomicsR-win.def  lib.rs
src/rust/: Cargo.toml
src/rust/src/: lib.rs
tests/testthat/: test_caret.R  test_gpredomicsR.R  test_individual.R  test_r_fun.R  test_rust_fun.R
