[package]
name = 'rgpredomicsR'
version = '0.2.2'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'rgpredomicsR'

[dependencies]
extendr-api = '*'
gpredomics = { git = "https://github.com/predomics/gpredomics.git", tag="v0.4.2" }
#gpredomics = { git = "https://github.com/predomics/gpredomics.git"}
flexi_logger = "0.27"
chrono = "0.4"
log = "0.4"
#gpredomics = { path = "../../../gpredomicsh" }
#gpredomics = { path = "../../../gpredomics" }
