[package]
name = 'rgpredomicsR'
version = '0.4.2'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'rgpredomicsR'

[dependencies]
extendr-api = '*'
gpredomics = { git = "https://github.com/predomics/gpredomics.git", tag="v0.7.2" }
#gpredomics = { git = "https://github.com/predomics/gpredomics.git"}
flexi_logger = "0.27"
chrono = "0.4"
log = "0.4"
once_cell = "1"
#gpredomics = { path = "../../../gpredomics" }
