[package]
name = 'rgpredomicsR'
version = '0.4.3'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'rgpredomicsR'

[dependencies]
extendr-api = '*'
gpredomics = { git = "https://github.com/predomics/gpredomics.git", tag="v0.7.2" }
flexi_logger = "0.27"
chrono = "0.4"
log = "0.4"
once_cell = "1"
rand_chacha = "0.3"
rayon = "1.7"